name:                marchingcubes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/marchingcubes#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Maths
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes
                     , CTypes
  build-depends:       base >= 4.7 && < 5
--                     , ilist
                     , extra
  default-language:    Haskell2010
  include-dirs:        C
  C-sources:           C/marchingcubes.c
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/marchingcubes
